--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -25,18 +25,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Get Commit Date
+        run: |
+          /usr/bin/git show -s --format=%ci
+          /usr/bin/git show -s --format=%ci > version
+
       - name: Move HTML5 templates into position
         run: |
           mkdir -v -p ~/.local/share/godot/templates
           mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/templates/${GODOT_VERSION}.stable
       - name: Create staging directory
         run: mkdir -v -p build/web
-
-      - name: Show Commit Date
-        run: /usr/bin/git show -s --format=%ci
-
-      - name: Get Commit Date
-        run: /usr/bin/git show -s --format=%ci > version
 
       - name: Build
         run: godot -v --export "HTML5" build/web/index.html project.godot
