--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -28,7 +28,8 @@ jobs:
       - name: Get Commit Date
         run: |
           /usr/bin/git show -s --format=%ci
-          /usr/bin/git show -s --format=%ci > version
+          /usr/bin/git show -s --format=%ci > assets/version.txt
+          ls assets
 
       - name: Move HTML5 templates into position
         run: |
