--- a/.github/workflows/godot-ci.yml
+++ b/.github/workflows/godot-ci.yml
@@ -27,10 +27,8 @@ jobs:
 
       - name: Get Commit Date
         run: |
-          mkdir -v -p ~/.local/share/godot/PartyPoopers
           /usr/bin/git show -s --format=%ci
-          /usr/bin/git show -s --format=%ci > ~/.local/share/godot/PartyPoopers/version.txt
-          ls ~/.local/share/godot/PartyPoopers
+          /usr/bin/git show -s --format=%ci > version
 
       - name: Move HTML5 templates into position
         run: |
